tests/parse/error_sparse_pattern.co
// RUN: not choreo -sim %s 2>&1 | FileCheck %s

__co__ void sparse_dma_bad(f32 [16, 16] input) {
  parallel p by 1 {
    with {x, y} in [1, 1] {
      f = dma.copy.sp(1:4) input.chunkat(x, y) => local;
    }
  }
}

// CHECK: error: Only 2:4 structured sparsity is supported; got 1:4.
// CHECK-NOT: error:
